--- a/mydealzCustomRSS/Dockerfile
+++ b/mydealzCustomRSS/Dockerfile
@@ -3,7 +3,7 @@ FROM $BUILD_FROM
 
 RUN apt-get update && \
     apt-get install -y \
-        python \
+        python3 \
         pip && \
     apt-get clean -y && rm -rf /var/lib/apt/lists/*
 
