--- a/repository.yaml
+++ b/repository.yaml
@@ -1,2 +1,3 @@
 # https://developers.home-assistant.io/docs/add-ons/repository#repository-configuration
 name: SvenK84 Home Assistant add-on repository
+maintainer: SvenK84
