--- a/hello-world-new/config.yaml
+++ b/hello-world-new/config.yaml
@@ -1,7 +1,7 @@
 name: "Hello world"
 description: "My first real add-on!"
 version: "1.0.0"
-slug: "hello_world"
+slug: "hello_world_new"
 init: false
 arch:
   - aarch64
