--- a/mydealzCustomRSSnew/config.yaml
+++ b/mydealzCustomRSSnew/config.yaml
@@ -1,7 +1,7 @@
-name: "Hello world New"
+name: "HmydealzCustomRSSnew"
 description: "My first real add-on!"
 version: "1.0.0"
-slug: "hello_world_new"
+slug: "mydealzCustomRSSnewnew"
 init: false
 arch:
   - aarch64
