--- a/mydealzCustomRSSnew/config.yaml
+++ b/mydealzCustomRSSnew/config.yaml
@@ -1,7 +1,7 @@
-name: "HmydealzCustomRSSnew"
+name: "mdCustomRSSnew"
 description: "My first real add-on!"
 version: "1.0.0"
-slug: "mydealzCustomRSSnewnew"
+slug: "mdCustomRSSnewnew"
 init: false
 arch:
   - aarch64
