--- a/rssTest/config.yaml
+++ b/rssTest/config.yaml
@@ -1,7 +1,7 @@
-name: "rssTest"
+name: "rssTest43265873465786345"
 description: "RSS Test"
 version: "0.0.1"
-slug: "rssTest"
+slug: "rssTest43265873465786345"
 init: false
 arch:
   - aarch64
